--- a/Servidor/pom.xml
+++ b/Servidor/pom.xml
@@ -9,4 +9,11 @@
         <maven.compiler.release>24</maven.compiler.release>
         <exec.mainClass>org.yourcompany.yourproject.Servidor</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.46.0.0</version>
+        </dependency>
+    </dependencies>
 </project>
